fix: delete wrong margins

--- a/plants/assets/sass/layouts/_prices.scss
+++ b/plants/assets/sass/layouts/_prices.scss
@@ -165,7 +165,7 @@
       font-size: 15px;
       padding: 16px 40px 16px 30px;
       width: 180px;
-      margin: 0 auto 14px;
+      margin: 0 auto 20px;
     }
    
     .accordion__item--active & {
@@ -197,7 +197,7 @@
     @include respond(phone) {
       width: 180px;
       padding: 10px;
-      margin-top: -20px;
+      margin-top: -30px;
     }
   }
   
